# tsknvim

./: .luacheckrc  LICENSE  README.md  init.lua  lazy-lock.json  lazyvim.json
lua/: .luarc.json
lua/config/: autocmds.lua  keymaps.lua  lazy.lua  options.lua  usercmds.lua
lua/plugins/: coding.lua  colorscheme.lua  core.lua  editor.lua  formatting.lua  heirline.lua  lang.lua  linting.lua  lsp.lua  treesitter.lua  ui.lua
lua/plugins/extras/editor/: heirline.lua  telescope.lua  ufo.lua
lua/plugins/extras/lang/: bash.lua  clangd.lua  css.lua  flutter.lua  git.lua  html.lua  xml.lua
lua/tsknvim/: init.lua  utils.lua
lua/tsknvim/configs/: autocmds.lua  init.lua  keymaps.lua  opts.lua  usercmds.lua
lua/tsknvim/plugins/: Comment.lua  alpha.lua  auto-session.lua  blink.lua  catppuccin.lua  ccc.lua  cmp.lua  codesnap.lua  codewindow.lua  comment.lua  conform.lua  dap.lua  devicons.lua  dressing.lua  duck.lua  fidget.lua  flutter-tools.lua  gen.lua  gitgraph.lua  gitsigns.lua  heirline.lua  ibl.lua  icon-picker.lua  indent_blankline.lua  init.lua  lint.lua  lsp_lines.lua  lspconfig.lua  lspsaga.lua  markdown.lua  markview.lua  mason.lua  neogen.lua  noice.lua  notify.lua  nvim-treesitter.lua  nvim-web-devicons.lua  persistence.lua  project.lua  refactoring.lua  (+9 more)
lua/tsknvim/plugins/languages/: bash.lua  c.lua  cmake.lua  cpp.lua  css.lua  flutter.lua  git.lua  html.lua  java.lua  javascript.lua  json.lua  lua.lua  markdown.lua  powershell.lua  python.lua  r.lua  rust.lua  tex.lua  toml.lua  xml.lua
lua/tsknvim/templates/c/: .clang-format  CMakeLists.txt
lua/tsknvim/templates/c/src/: main.c
lua/tsknvim/templates/codeforces/: CMakeLists.txt
lua/tsknvim/templates/cpp/: .clang-format  .clang-tidy  CMakeLists.txt
lua/tsknvim/templates/cpp/src/: main.cpp
lua/tsknvim/templates/gtk/: .clang-tidy  CMakeLists.txt
lua/tsknvim/templates/gtk/data/: #{in_snake_case(name)}#.gresource.xml  #{project_name}.gresource.xml
lua/tsknvim/templates/gtk/data/#{in_snake_case(name)}#/: window.ui
lua/tsknvim/templates/gtk/data/#{in_snake_case(name)}#/applications/: com.github.TarekSaeed0.#{in_snake_case(name)}#.desktop
lua/tsknvim/templates/gtk/data/#{in_snake_case(name)}#/icons/: com.github.TarekSaeed0.#{in_snake_case(name)}#.rc
lua/tsknvim/templates/gtk/data/#{in_snake_case(name)}#/ui/: application_window.ui  window.ui
lua/tsknvim/templates/gtk/data/#{project_name}/: window.ui
lua/tsknvim/templates/gtk/data/example/: window.ui
lua/tsknvim/templates/gtk/data/example/applications/: com.github.TarekSaeed0.example.desktop
lua/tsknvim/templates/gtk/include/#{in_snake_case(name)}#/: application.h  application_window.h
lua/tsknvim/templates/gtk/include/#{project_name}/: application.h
lua/tsknvim/templates/gtk/include/example/: application.h
lua/tsknvim/templates/gtk/src/: main.c
lua/tsknvim/templates/gtk/src/#{in_snake_case(name)}#/: application.c
lua/tsknvim/templates/gtk/src/#{project_name}/: application.c
lua/tsknvim/templates/gtk/src/example/: application.c
lua/tsknvim/templates/sdl/: CMakeLists.txt
lua/tsknvim/templates/sdl/src/: main.c
templates/c/: CMakeLists.txt
templates/c-binary/: .clang-tidy  .template.lua
templates/c-library/: CMakeLists.txt
templates/c-library/include/: #{in_snake_case(name)}#.h
templates/c-library/src/: #{in_snake_case(name)}#.c  main.c
templates/c/src/: main.c
templates/codeforces/src/: main.cpp
templates/cpp-binary/: .clang-tidy  CMakeLists.txt
templates/cpp/src/: main.cpp
templates/gtk/: .clang-tidy  CMakeLists.txt
templates/gtk/src/#{in_snake_case(name)}#/: application_window.c
templates/sdl/src/: main.c
